# the_raytracer_challenge_repl

./: .gitignore  CNAME  README.md  global.css  index.html  package-lock.json  package.json  rollup.config.js  sw.js
assets/favicon/: favicon.afdesign
public/: CNAME  global.css  index.html  sw.js
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: create-build-info.sh  release-website.sh
src/: App.svelte  Debouncer.ts  Mutex.ts  Render.worker.ts  RenderPool.ts  index.html
src/actions/: slidable-jsx.d.ts  slidable.ts  tooltip.ts  trplclickable-jsx.d.ts  trplclickable.ts
src/components/: CameraMenu.svelte  CheckButton.svelte  CheckMenuButton.svelte  Codemirror.svelte  ErrorTile.svelte  Imprint.svelte  LiteYouTube.svelte  ReleaseInfo.svelte  RenderArea.svelte  RenderControls.svelte  RenderSurface.svelte  SplitView.svelte  WelcomeVideo.svelte  YamlEditor.svelte
src/lib/: Deferred.ts  LocalStorageStore.ts  Mutex.ts  RenderPool.ts
src/stores/: camera.ts  editor.ts  render.ts  welcome.ts
src/worlds/: three_spheres.yaml
tauri-app/: package-lock.json  package.json
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
