[package]
name = "the_ray_tracer_challenge_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[dependencies]
the_ray_tracer_challenge = { git = "https://github.com/jakobwesthoff/the_ray_tracer_challenge_in_rust", branch = "main" }
# WASM stuff
wasm-bindgen = "0.2.78"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'ImageData',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = "fat"
